--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                 }
             }
             function deleteCookie(){
-                document.cookie = "progress=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+                document.cookie = "progress=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/; domain=" + new URL(document.location.href).host;
             }
         </script>
     </head>
